--- a/QA.AutomatedMagic.Reports.HtmlReport/css/css.css
+++ b/QA.AutomatedMagic.Reports.HtmlReport/css/css.css
@@ -26,7 +26,7 @@
 }
 
 .test-fltr-btn-fld{
-    background-color: orange;
+    background-color: red;
 }
 
 .test-fltr-btn-skpd {
@@ -163,7 +163,7 @@ img {
 }
 
 .step-fltr-btn-psd  {
-    background-color: springgreen;
+    background-color: greenyellow;
 }
 
 .step-fltr-btn-fld {
@@ -171,7 +171,7 @@ img {
 }
 
 .step-fltr-btn-skpd {
-    background-color: orange;
+    background-color: lightseagreen;
 }
 
 .step-fltr-btn-unkwn {
