--- a/QA.AutomatedMagic.Reports.HtmlReport/css/css.css
+++ b/QA.AutomatedMagic.Reports.HtmlReport/css/css.css
@@ -1,4 +1,4 @@
-.container {
+﻿.container {
     min-width: 90%;
 }
 .environment {
@@ -239,14 +239,19 @@ img {
 /*    margin-left: 2%;*/
 }
 
+.testpTD {
+    width: 100%;
+}
+
 .testContainer {
     width: 100%;
-     margin-left: 2%;
+   // margin-left: 2%;
     display: none;
 }
 .stepContainer{
     width: 100%;
-    margin-left: 5%;
+	//float: right;
+    //margin-left: 5%;
     display: none;
 }
 
