--- a/QA.AutomatedMagic.Framework.UI.ReportViewer/MainWindow.xaml
+++ b/QA.AutomatedMagic.Framework.UI.ReportViewer/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:QA.AutomatedMagic.Framework.UI.ReportViewer"
         mc:Ignorable="d"
-        Title="MainWindow" Height="800" Width="800">
+        Title="Repor Viewer" Height="800" Width="800">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition></ColumnDefinition>
